--- a/src/decision_tree.ipynb
+++ b/src/decision_tree.ipynb
@@ -15,63 +15,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(9764026, 54)\n",
-      "   app_id  helpful  funny        date  is_recommended  hours   user_id  win  \\\n",
-      "0  304390        4      0  1619308800               0   42.5  10178125    1   \n",
-      "1  304390        0      0  1612310400               1  265.8   9545809    1   \n",
-      "2  304390        0      0  1604880000               0  493.3   2968763    1   \n",
-      "3  304390        0      0  1624579200               1  114.5  13598296    1   \n",
-      "4  304390        0      0  1617408000               0  226.0   6549932    1   \n",
+      "(46365, 56)\n",
+      "   app_id  date_release  win  mac  linux  rating  positive_ratio  \\\n",
+      "0  552520    1522022400    1    0      0       7              80   \n",
+      "1  552520    1522022400    1    0      0       7              80   \n",
+      "2  552520    1522022400    1    0      0       7              80   \n",
+      "3  552520    1522022400    1    0      0       7              80   \n",
+      "4  552520    1522022400    1    0      0       7              80   \n",
       "\n",
-      "   mac  linux  ...  RPG  Indie  Software Training  Simulation  \\\n",
-      "0    0      0  ...    0      0                  0           0   \n",
-      "1    0      0  ...    0      0                  0           0   \n",
-      "2    0      0  ...    0      0                  0           0   \n",
-      "3    0      0  ...    0      0                  0           0   \n",
-      "4    0      0  ...    0      0                  0           0   \n",
+      "   user_reviews  price_final  price_original  ...  RPG  Indie  \\\n",
+      "0        129943         60.0             0.0  ...    0      0   \n",
+      "1        129943         60.0             0.0  ...    0      0   \n",
+      "2        129943         60.0             0.0  ...    0      0   \n",
+      "3        129943         60.0             0.0  ...    0      0   \n",
+      "4        129943         60.0             0.0  ...    0      0   \n",
       "\n",
-      "   Game Development  Massively Multiplayer  Early Access  Nudity  Strategy  \\\n",
-      "0                 0                      0             0       0         0   \n",
-      "1                 0                      0             0       0         0   \n",
-      "2                 0                      0             0       0         0   \n",
-      "3                 0                      0             0       0         0   \n",
-      "4                 0                      0             0       0         0   \n",
+      "   Software Training  Simulation  Game Development  Massively Multiplayer  \\\n",
+      "0                  0           0                 0                      0   \n",
+      "1                  0           0                 0                      0   \n",
+      "2                  0           0                 0                      0   \n",
+      "3                  0           0                 0                      0   \n",
+      "4                  0           0                 0                      0   \n",
       "\n",
-      "   Violent  \n",
-      "0        0  \n",
-      "1        0  \n",
-      "2        0  \n",
-      "3        0  \n",
-      "4        0  \n",
+      "   Early Access  Nudity  Strategy  Violent  \n",
+      "0             0       0         0        0  \n",
+      "1             0       0         0        0  \n",
+      "2             0       0         0        0  \n",
+      "3             0       0         0        0  \n",
+      "4             0       0         0        0  \n",
       "\n",
-      "[5 rows x 54 columns]\n",
-      "Index(['app_id', 'helpful', 'funny', 'date', 'is_recommended', 'hours',\n",
-      "       'user_id', 'win', 'mac', 'linux', 'rating', 'positive_ratio',\n",
-      "       'user_reviews', 'price_final', 'price_original', 'steam_deck',\n",
-      "       'release_date', 'required_age', 'achievements', 'positive_ratings',\n",
-      "       'negative_ratings', 'average_playtime', 'median_playtime', 'owners',\n",
-      "       'price', 'Free to Play', 'Action', 'Utilities', 'Animation & Modeling',\n",
-      "       'Photo Editing', 'Education', 'Sports', 'Audio Production', 'Casual',\n",
-      "       'Web Publishing', 'Accounting', 'Documentary', 'Sexual Content',\n",
-      "       'Adventure', 'Video Production', 'Design & Illustration', 'Racing',\n",
-      "       'Gore', 'Tutorial', 'RPG', 'Indie', 'Software Training', 'Simulation',\n",
-      "       'Game Development', 'Massively Multiplayer', 'Early Access', 'Nudity',\n",
-      "       'Strategy', 'Violent'],\n",
+      "[5 rows x 56 columns]\n",
+      "Index(['app_id', 'date_release', 'win', 'mac', 'linux', 'rating',\n",
+      "       'positive_ratio', 'user_reviews', 'price_final', 'price_original',\n",
+      "       'discount', 'steam_deck', 'helpful', 'funny', 'date', 'is_recommended',\n",
+      "       'hours', 'user_id', 'review_id', 'required_age', 'achievements',\n",
+      "       'positive_ratings', 'negative_ratings', 'average_playtime',\n",
+      "       'median_playtime', 'owners', 'price', 'Free to Play', 'Action',\n",
+      "       'Utilities', 'Animation & Modeling', 'Photo Editing', 'Education',\n",
+      "       'Sports', 'Audio Production', 'Casual', 'Web Publishing', 'Accounting',\n",
+      "       'Documentary', 'Sexual Content', 'Adventure', 'Video Production',\n",
+      "       'Design & Illustration', 'Racing', 'Gore', 'Tutorial', 'RPG', 'Indie',\n",
+      "       'Software Training', 'Simulation', 'Game Development',\n",
+      "       'Massively Multiplayer', 'Early Access', 'Nudity', 'Strategy',\n",
+      "       'Violent'],\n",
       "      dtype='object')\n",
       "app_id                     int64\n",
-      "helpful                    int64\n",
-      "funny                      int64\n",
-      "date                       int64\n",
-      "is_recommended             int64\n",
-      "hours                    float64\n",
-      "user_id                    int64\n",
+      "date_release               int64\n",
       "win                        int64\n",
       "mac                        int64\n",
       "linux                      int64\n",
@@ -80,8 +76,15 @@
       "user_reviews               int64\n",
       "price_final              float64\n",
       "price_original           float64\n",
+      "discount                 float64\n",
       "steam_deck                 int64\n",
-      "release_date               int64\n",
+      "helpful                    int64\n",
+      "funny                      int64\n",
+      "date                       int64\n",
+      "is_recommended             int64\n",
+      "hours                    float64\n",
+      "user_id                    int64\n",
+      "review_id                  int64\n",
       "required_age               int64\n",
       "achievements               int64\n",
       "positive_ratings           int64\n",
@@ -120,79 +123,83 @@
       "Strategy                   int64\n",
       "Violent                    int64\n",
       "dtype: object\n",
-      "             app_id       helpful         funny          date  is_recommended  \\\n",
-      "count  9.764026e+06  9.764026e+06  9.764026e+06  9.764026e+06    9.764026e+06   \n",
-      "mean   3.755675e+05  2.232770e+00  7.510872e-01  1.622634e+09    9.193086e-01   \n",
-      "std    2.378189e+05  3.499159e+01  1.867060e+01  2.729216e+07    2.723606e-01   \n",
-      "min    1.000000e+01  0.000000e+00  0.000000e+00  1.577837e+09    0.000000e+00   \n",
-      "25%    2.383200e+05  0.000000e+00  0.000000e+00  1.598918e+09    1.000000e+00   \n",
-      "50%    3.469000e+05  0.000000e+00  0.000000e+00  1.621296e+09    1.000000e+00   \n",
-      "75%    5.187900e+05  0.000000e+00  0.000000e+00  1.644883e+09    1.000000e+00   \n",
-      "max    1.058430e+06  1.711500e+04  1.341600e+04  1.672445e+09    1.000000e+00   \n",
+      "              app_id  date_release      win           mac         linux  \\\n",
+      "count   46365.000000  4.636500e+04  46365.0  46365.000000  46365.000000   \n",
+      "mean   336570.117761  1.445352e+09      1.0      0.540041      0.390424   \n",
+      "std    244014.483577  1.099198e+08      0.0      0.498400      0.487851   \n",
+      "min       220.000000  1.099267e+09      1.0      0.000000      0.000000   \n",
+      "25%    227300.000000  1.382486e+09      1.0      0.000000      0.000000   \n",
+      "50%    294100.000000  1.461197e+09      1.0      1.000000      0.000000   \n",
+      "75%    431960.000000  1.525046e+09      1.0      1.000000      1.000000   \n",
+      "max    960090.000000  1.655683e+09      1.0      1.000000      1.000000   \n",
       "\n",
-      "              hours       user_id        win           mac         linux  ...  \\\n",
-      "count  9.764026e+06  9.764026e+06  9764026.0  9.764026e+06  9.764026e+06  ...   \n",
-      "mean   1.573134e+02  6.900530e+06        1.0  4.877327e-01  3.417509e-01  ...   \n",
-      "std    2.059209e+02  4.122895e+06        0.0  4.998495e-01  4.742966e-01  ...   \n",
-      "min    1.210000e+01  0.000000e+00        1.0  0.000000e+00  0.000000e+00  ...   \n",
-      "25%    2.860000e+01  3.072944e+06        1.0  0.000000e+00  0.000000e+00  ...   \n",
-      "50%    6.670000e+01  7.094499e+06        1.0  0.000000e+00  0.000000e+00  ...   \n",
-      "75%    1.893000e+02  1.041067e+07        1.0  1.000000e+00  1.000000e+00  ...   \n",
-      "max    9.999000e+02  1.378677e+07        1.0  1.000000e+00  1.000000e+00  ...   \n",
+      "             rating  positive_ratio  user_reviews   price_final  \\\n",
+      "count  46365.000000    46365.000000  4.636500e+04  46365.000000   \n",
+      "mean       7.408476       91.170236  4.508574e+05     20.663461   \n",
+      "std        0.631897        6.810820  7.748552e+05     16.202658   \n",
+      "min        4.000000       57.000000  1.037200e+05      0.000000   \n",
+      "25%        7.000000       86.000000  1.647020e+05     10.000000   \n",
+      "50%        7.000000       94.000000  2.304070e+05     20.000000   \n",
+      "75%        8.000000       96.000000  5.421980e+05     30.000000   \n",
+      "max        8.000000       98.000000  7.494460e+06     60.000000   \n",
       "\n",
-      "                RPG         Indie  Software Training    Simulation  \\\n",
-      "count  9.764026e+06  9.764026e+06       9.764026e+06  9.764026e+06   \n",
-      "mean   2.357276e-01  3.769325e-01       4.649721e-05  2.657840e-01   \n",
-      "std    4.244527e-01  4.846178e-01       6.818728e-03  4.417498e-01   \n",
-      "min    0.000000e+00  0.000000e+00       0.000000e+00  0.000000e+00   \n",
-      "25%    0.000000e+00  0.000000e+00       0.000000e+00  0.000000e+00   \n",
-      "50%    0.000000e+00  0.000000e+00       0.000000e+00  0.000000e+00   \n",
-      "75%    0.000000e+00  1.000000e+00       0.000000e+00  1.000000e+00   \n",
-      "max    1.000000e+00  1.000000e+00       1.000000e+00  1.000000e+00   \n",
+      "       price_original  ...           RPG         Indie  Software Training  \\\n",
+      "count    46365.000000  ...  46365.000000  46365.000000            46365.0   \n",
+      "mean         0.459143  ...      0.281721      0.302836                0.0   \n",
+      "std          2.472455  ...      0.449843      0.459490                0.0   \n",
+      "min          0.000000  ...      0.000000      0.000000                0.0   \n",
+      "25%          0.000000  ...      0.000000      0.000000                0.0   \n",
+      "50%          0.000000  ...      0.000000      0.000000                0.0   \n",
+      "75%          0.000000  ...      1.000000      1.000000                0.0   \n",
+      "max         19.990000  ...      1.000000      1.000000                0.0   \n",
       "\n",
-      "       Game Development  Massively Multiplayer  Early Access        Nudity  \\\n",
-      "count      9.764026e+06           9.764026e+06  9.764026e+06  9.764026e+06   \n",
-      "mean       4.342471e-05           1.184916e-01  1.451117e-01  7.902785e-03   \n",
-      "std        6.589600e-03           3.231893e-01  3.522134e-01  8.854565e-02   \n",
-      "min        0.000000e+00           0.000000e+00  0.000000e+00  0.000000e+00   \n",
-      "25%        0.000000e+00           0.000000e+00  0.000000e+00  0.000000e+00   \n",
-      "50%        0.000000e+00           0.000000e+00  0.000000e+00  0.000000e+00   \n",
-      "75%        0.000000e+00           0.000000e+00  0.000000e+00  0.000000e+00   \n",
-      "max        1.000000e+00           1.000000e+00  1.000000e+00  1.000000e+00   \n",
+      "         Simulation  Game Development  Massively Multiplayer  Early Access  \\\n",
+      "count  46365.000000           46365.0           46365.000000  46365.000000   \n",
+      "mean       0.203947               0.0               0.080751      0.122765   \n",
+      "std        0.402934               0.0               0.272455      0.328171   \n",
+      "min        0.000000               0.0               0.000000      0.000000   \n",
+      "25%        0.000000               0.0               0.000000      0.000000   \n",
+      "50%        0.000000               0.0               0.000000      0.000000   \n",
+      "75%        0.000000               0.0               0.000000      0.000000   \n",
+      "max        1.000000               0.0               1.000000      1.000000   \n",
       "\n",
-      "           Strategy       Violent  \n",
-      "count  9.764026e+06  9.764026e+06  \n",
-      "mean   1.984207e-01  1.163455e-02  \n",
-      "std    3.988107e-01  1.072342e-01  \n",
-      "min    0.000000e+00  0.000000e+00  \n",
-      "25%    0.000000e+00  0.000000e+00  \n",
-      "50%    0.000000e+00  0.000000e+00  \n",
-      "75%    0.000000e+00  0.000000e+00  \n",
-      "max    1.000000e+00  1.000000e+00  \n",
+      "             Nudity      Strategy       Violent  \n",
+      "count  46365.000000  46365.000000  46365.000000  \n",
+      "mean       0.011258      0.136676      0.011258  \n",
+      "std        0.105508      0.343509      0.105508  \n",
+      "min        0.000000      0.000000      0.000000  \n",
+      "25%        0.000000      0.000000      0.000000  \n",
+      "50%        0.000000      0.000000      0.000000  \n",
+      "75%        0.000000      0.000000      0.000000  \n",
+      "max        1.000000      1.000000      1.000000  \n",
       "\n",
-      "[8 rows x 54 columns]\n"
+      "[8 rows x 56 columns]\n"
      ]
     }
    ],
    "source": [
-    "\n",
+    "# 데이터셋 로드 및 불필요한 column 제거\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
     "# Load the data\n",
-    "data = pd.read_csv('../datasets/merged_steam_games.csv')\n",
+    "data = pd.read_csv('../datasets/merged_steam_games_.csv')\n",
     "\n",
     "# convert date_realese columns to unixtime\n",
-    "data['release_date'] = pd.to_datetime(data['release_date'])\n",
-    "data['release_date'] = data['release_date'].apply(lambda x: int(x.timestamp()))\n",
+    "data['date_release'] = pd.to_datetime(data['date_release'])\n",
+    "data['date_release'] = data['date_release'].apply(lambda x: int(x.timestamp()))\n",
     "\n",
     "data['date'] = pd.to_datetime(data['date'])\n",
     "data['date'] = data['date'].apply(lambda x: int(x.timestamp()))\n",
     "\n",
     "ids = pd.DataFrame(data['app_id'])\n",
+    "# data = data.drop(['app_id'], axis=1)\n",
     "\n",
     "# 전처리 안된 column 제거\n",
     "data = data.drop(['categories'], axis=1)\n",
+    "\n",
+    "data = data.drop(['title'], axis=1)\n",
+    "data = data.drop(['release_date'], axis=1)  \n",
     "\n",
     "print(data.shape)\n",
     "print(data.head())\n",
@@ -203,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,21 +232,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[304390 306130 238960 ... 431700 563200 813650]\n"
+      "[552520 242760 444200 255710    220 594650 582010    550 271590 294100\n",
+      " 107410 292030 105600 438100 252490    570 377160  22380 239140 812140\n",
+      " 632360 221100 270880 251570 289070 238960 108600 548430 367520    730\n",
+      " 264710 646570 275850 230410 413150 359550 218620 435150    620 648800\n",
+      " 518790 444090 960090   4000 489830 381210 311210 374320  12210    240\n",
+      "    440  48700  49520 203160 227300 236390 262060 284160 291550 304930\n",
+      " 306130 319630 322330 346110 379720 391540 394360 578080 431960 427520\n",
+      " 814380 945360 477160 250900]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/tr/1pblcvrd48j5lfn0khj_hm4w0000gn/T/ipykernel_37371/2006423257.py:15: SettingWithCopyWarning: \n",
+      "/var/folders/tr/1pblcvrd48j5lfn0khj_hm4w0000gn/T/ipykernel_93633/3791647812.py:15: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -251,7 +265,7 @@
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
     "scaled_data = game_infos.copy()\n",
-    "scale_cols = ['release_date','positive_ratio','user_reviews','price_final','price_original', 'required_age', 'achievements', 'positive_ratings', 'negative_ratings', \n",
+    "scale_cols = ['date_release','positive_ratio','user_reviews','price_final','price_original', 'required_age', 'achievements', 'positive_ratings', 'negative_ratings', \n",
     "              'average_playtime', 'median_playtime', 'owners', 'price',]\n",
     "# scale_cols = [col for col in scaled_data.columns if col not in no_scale_cols]\n",
     "unique_values = ids['app_id'].unique()\n",
@@ -268,14 +282,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(9764026, 54)\n"
+      "(46365, 56)\n"
      ]
     }
    ],
@@ -294,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,14 +328,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 0 1]\n",
+      "[1]\n",
       "1.0\n"
      ]
     }
@@ -334,7 +348,7 @@
     "# 각 유저별로 decision tree를 만들어서 예측\n",
     "\n",
     "# 유저 아이디를 입력받아서 해당 유저의 추천 데이터만 추출\n",
-    "target_user_id = 10178125\n",
+    "target_user_id = 7606333\n",
     "\n",
     "train_indices = df_X_train.index[df_X_train['user_id'] == target_user_id].tolist()\n",
     "X_target_train = df_X_train.loc[train_indices]\n",
