--- a/src/SVD.ipynb
+++ b/src/SVD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
        "[5 rows x 59 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
        "[5 rows x 281295 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,12 +507,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_user_liked_games(user_id):\n",
-    "    user_id = str(user_id)  # Convert user_id to string\n",
     "\n",
     "    if user_id not in user_item_matrix.columns:\n",
     "        return None  # Return None if user_id is not found\n",
@@ -526,28 +525,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_top_similar_games(game_name):\n",
+    "# def get_top_similar_games(game_name):\n",
+    "#     if game_name not in user_item_matrix.index:\n",
+    "#         return None  # Return None if game_name is not found\n",
+    "\n",
+    "#     game_index = user_item_matrix.index.get_loc(game_name)\n",
+    "#     sim_scores = svd_based_collabor[game_index]\n",
+    "\n",
+    "#     # Get indices of top similar games (excluding the game itself)\n",
+    "#     similar_game_indices = np.argsort(sim_scores)[::-1][1:11]\n",
+    "#     similar_games = user_item_matrix.index[similar_game_indices]\n",
+    "#     scores = sim_scores[similar_game_indices]\n",
+    "\n",
+    "#     return similar_games, scores\n",
+    "\n",
+    "def get_similar_game(game_name):\n",
     "    if game_name not in user_item_matrix.index:\n",
-    "        return None  # Return None if game_name is not found\n",
-    "\n",
-    "    game_index = user_item_matrix.index.get_loc(game_name)\n",
-    "    sim_scores = svd_based_collabor[game_index]\n",
-    "\n",
-    "    # Get indices of top similar games (excluding the game itself)\n",
-    "    similar_game_indices = np.argsort(sim_scores)[::-1][1:11]\n",
-    "    similar_games = user_item_matrix.index[similar_game_indices]\n",
-    "    scores = sim_scores[similar_game_indices]\n",
-    "\n",
-    "    return similar_games, scores"
+    "        return None, None\n",
+    "    else:\n",
+    "        sim_games = svd_based_collabor.sort_values(by=game_name, ascending=False).index[:10]\n",
+    "        sim_score = svd_based_collabor.sort_values(by=game_name, ascending=False).loc[:, game_name].tolist()[:10]\n",
+    "        return sim_games, sim_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +674,7 @@
     "        return f\"Game title '{game_name}' not found in the dataset index.\"\n",
     "\n",
     "    # Get games similar to the provided game\n",
-    "    similar_games, _ = get_top_similar_games(game_name)\n",
+    "    similar_games, scores = get_top_similar_games(game_name)\n",
     "\n",
     "    # Get games liked by the user\n",
     "    user_liked_games = get_user_liked_games(user_id)\n",
@@ -684,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -702,9 +709,9 @@
       "\u001b[1;31mKeyError\u001b[0m: 29",
       "\nThe above exception was the direct cause of the following exception:\n",
       "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32md:\\git\\SteamGameRecommendationSystem\\src\\SVD.ipynb Cell 11\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/git/SteamGameRecommendationSystem/src/SVD.ipynb#X10sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Use the function for checking user likeness with SVD\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/git/SteamGameRecommendationSystem/src/SVD.ipynb#X10sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m like_prediction \u001b[39m=\u001b[39m check_user_like_specific_game(\u001b[39m13755432\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39mGarry\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39ms Mod\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/git/SteamGameRecommendationSystem/src/SVD.ipynb#X10sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mprint\u001b[39m(like_prediction)\n",
-      "\u001b[1;32md:\\git\\SteamGameRecommendationSystem\\src\\SVD.ipynb Cell 11\u001b[0m line \u001b[0;36m1\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/git/SteamGameRecommendationSystem/src/SVD.ipynb#X10sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mGame title \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mgame_name\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m not found in the dataset index.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/git/SteamGameRecommendationSystem/src/SVD.ipynb#X10sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39m# Get games similar to the provided game\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/git/SteamGameRecommendationSystem/src/SVD.ipynb#X10sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m similar_games, _ \u001b[39m=\u001b[39m get_top_similar_games(game_name)\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/git/SteamGameRecommendationSystem/src/SVD.ipynb#X10sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39m# Get games liked by the user\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/git/SteamGameRecommendationSystem/src/SVD.ipynb#X10sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m user_liked_games \u001b[39m=\u001b[39m get_user_liked_games(user_id)\n",
-      "\u001b[1;32md:\\git\\SteamGameRecommendationSystem\\src\\SVD.ipynb Cell 11\u001b[0m line \u001b[0;36m6\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/git/SteamGameRecommendationSystem/src/SVD.ipynb#X10sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mNone\u001b[39;00m  \u001b[39m# Return None if game_name is not found\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/git/SteamGameRecommendationSystem/src/SVD.ipynb#X10sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m game_index \u001b[39m=\u001b[39m user_item_matrix\u001b[39m.\u001b[39mindex\u001b[39m.\u001b[39mget_loc(game_name)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/git/SteamGameRecommendationSystem/src/SVD.ipynb#X10sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m sim_scores \u001b[39m=\u001b[39m svd_based_collabor[game_index]\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/git/SteamGameRecommendationSystem/src/SVD.ipynb#X10sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39m# Get indices of top similar games (excluding the game itself)\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/git/SteamGameRecommendationSystem/src/SVD.ipynb#X10sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m similar_game_indices \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39margsort(sim_scores)[::\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m][\u001b[39m1\u001b[39m:\u001b[39m11\u001b[39m]\n",
+      "\u001b[1;32md:\\git\\SteamGameRecommendationSystem\\src\\SVD.ipynb Cell 11\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/git/SteamGameRecommendationSystem/src/SVD.ipynb#X13sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Use the function for checking user likeness with SVD\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/git/SteamGameRecommendationSystem/src/SVD.ipynb#X13sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m like_prediction \u001b[39m=\u001b[39m check_user_like_specific_game(\u001b[39m13755432\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39mGarry\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39ms Mod\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/git/SteamGameRecommendationSystem/src/SVD.ipynb#X13sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mprint\u001b[39m(like_prediction)\n",
+      "\u001b[1;32md:\\git\\SteamGameRecommendationSystem\\src\\SVD.ipynb Cell 11\u001b[0m line \u001b[0;36m1\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/git/SteamGameRecommendationSystem/src/SVD.ipynb#X13sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mGame title \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mgame_name\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m not found in the dataset index.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/git/SteamGameRecommendationSystem/src/SVD.ipynb#X13sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39m# Get games similar to the provided game\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/git/SteamGameRecommendationSystem/src/SVD.ipynb#X13sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m similar_games, scores \u001b[39m=\u001b[39m get_top_similar_games(game_name)\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/git/SteamGameRecommendationSystem/src/SVD.ipynb#X13sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39m# Get games liked by the user\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/git/SteamGameRecommendationSystem/src/SVD.ipynb#X13sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m user_liked_games \u001b[39m=\u001b[39m get_user_liked_games(user_id)\n",
+      "\u001b[1;32md:\\git\\SteamGameRecommendationSystem\\src\\SVD.ipynb Cell 11\u001b[0m line \u001b[0;36m6\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/git/SteamGameRecommendationSystem/src/SVD.ipynb#X13sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mNone\u001b[39;00m  \u001b[39m# Return None if game_name is not found\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/git/SteamGameRecommendationSystem/src/SVD.ipynb#X13sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m game_index \u001b[39m=\u001b[39m user_item_matrix\u001b[39m.\u001b[39mindex\u001b[39m.\u001b[39mget_loc(game_name)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/git/SteamGameRecommendationSystem/src/SVD.ipynb#X13sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m sim_scores \u001b[39m=\u001b[39m svd_based_collabor[game_index]\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/git/SteamGameRecommendationSystem/src/SVD.ipynb#X13sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39m# Get indices of top similar games (excluding the game itself)\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/git/SteamGameRecommendationSystem/src/SVD.ipynb#X13sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m similar_game_indices \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39margsort(sim_scores)[::\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m][\u001b[39m1\u001b[39m:\u001b[39m11\u001b[39m]\n",
       "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pandas\\core\\frame.py:3893\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3891\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns\u001b[39m.\u001b[39mnlevels \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[0;32m   3892\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 3893\u001b[0m indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcolumns\u001b[39m.\u001b[39;49mget_loc(key)\n\u001b[0;32m   3894\u001b[0m \u001b[39mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   3895\u001b[0m     indexer \u001b[39m=\u001b[39m [indexer]\n",
       "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pandas\\core\\indexes\\base.py:3797\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3792\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(casted_key, \u001b[39mslice\u001b[39m) \u001b[39mor\u001b[39;00m (\n\u001b[0;32m   3793\u001b[0m         \u001b[39misinstance\u001b[39m(casted_key, abc\u001b[39m.\u001b[39mIterable)\n\u001b[0;32m   3794\u001b[0m         \u001b[39mand\u001b[39;00m \u001b[39many\u001b[39m(\u001b[39misinstance\u001b[39m(x, \u001b[39mslice\u001b[39m) \u001b[39mfor\u001b[39;00m x \u001b[39min\u001b[39;00m casted_key)\n\u001b[0;32m   3795\u001b[0m     ):\n\u001b[0;32m   3796\u001b[0m         \u001b[39mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[1;32m-> 3797\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key) \u001b[39mfrom\u001b[39;00m \u001b[39merr\u001b[39;00m\n\u001b[0;32m   3798\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m:\n\u001b[0;32m   3799\u001b[0m     \u001b[39m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3800\u001b[0m     \u001b[39m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3801\u001b[0m     \u001b[39m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3802\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_indexing_error(key)\n",
       "\u001b[1;31mKeyError\u001b[0m: 29"
