SVD, item based error fixed

--- a/src/SVD.ipynb
+++ b/src/SVD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
        "[5 rows x 59 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
        "[5 rows x 281295 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +566,7 @@
     "\n",
     "    similar_games_list = []\n",
     "    for game in liked_games:\n",
-    "        similar_games, _ = get_top_similar_games(game)\n",
+    "        similar_games, _ = get_similar_game(game)\n",
     "        similar_games_list.extend(similar_games)\n",
     "\n",
     "    # Removing duplicates and keeping the counts of each game\n",
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +674,7 @@
     "        return f\"Game title '{game_name}' not found in the dataset index.\"\n",
     "\n",
     "    # Get games similar to the provided game\n",
-    "    similar_games, scores = get_top_similar_games(game_name)\n",
+    "    similar_games, scores = get_similar_game(game_name)\n",
     "\n",
     "    # Get games liked by the user\n",
     "    user_liked_games = get_user_liked_games(user_id)\n",
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
