--- a/src/SVD.ipynb
+++ b/src/SVD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
        "[5 rows x 59 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
        "[5 rows x 281295 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,36 +525,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def get_top_similar_games(game_name):\n",
-    "#     if game_name not in user_item_matrix.index:\n",
-    "#         return None  # Return None if game_name is not found\n",
-    "\n",
-    "#     game_index = user_item_matrix.index.get_loc(game_name)\n",
-    "#     sim_scores = svd_based_collabor[game_index]\n",
-    "\n",
-    "#     # Get indices of top similar games (excluding the game itself)\n",
-    "#     similar_game_indices = np.argsort(sim_scores)[::-1][1:11]\n",
-    "#     similar_games = user_item_matrix.index[similar_game_indices]\n",
-    "#     scores = sim_scores[similar_game_indices]\n",
-    "\n",
-    "#     return similar_games, scores\n",
-    "\n",
     "def get_similar_game(game_name):\n",
     "    if game_name not in user_item_matrix.index:\n",
     "        return None, None\n",
     "    else:\n",
-    "        sim_games = svd_based_collabor.sort_values(by=game_name, ascending=False).index[:10]\n",
-    "        sim_score = svd_based_collabor.sort_values(by=game_name, ascending=False).loc[:, game_name].tolist()[:10]\n",
+    "        sim_games = svd_based_collabor.sort_values(by=game_name, ascending=False).index\n",
+    "        sim_score = svd_based_collabor.sort_values(by=game_name, ascending=False).loc[:, game_name].tolist()\n",
     "        return sim_games, sim_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,93 +566,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def check_user_like_svd(user_id, game_title):\n",
-    "\n",
-    "#     if user_id not in user_item_matrix.columns:\n",
-    "#         return f\"User ID '{user_id}' not found in the dataset columns.\"\n",
-    "\n",
-    "#     if game_title not in user_item_matrix.index:\n",
-    "#         return f\"Game title '{game_title}' not found in the dataset index.\"\n",
-    "\n",
-    "#     liked_games, _ = get_similar_game_svd(game_title)\n",
-    "#     user_liked_games, _ = get_similar_game_svd(user_id)\n",
-    "\n",
-    "#     if liked_games is None:  \n",
-    "#         return \"No similar games found for the given title.\"\n",
-    "\n",
-    "#     if user_liked_games is None:  \n",
-    "#         return \"No games liked by the user.\"\n",
-    "\n",
-    "#     top_similar_liked_games = set(user_liked_games[:10])\n",
-    "\n",
-    "#     if game_title in top_similar_liked_games:\n",
-    "#         return \"Yes\"\n",
-    "#     else:\n",
-    "#         return \"No\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['7 Days to Die', 'ARK: Survival Evolved', 'American Truck Simulator',\n",
-      "       'Among Us', 'Arma 3', 'Assassin's Creed® Odyssey', 'BeamNG.drive',\n",
-      "       'Bloons TD 6', 'Borderlands 2', 'Brawlhalla',\n",
-      "       'Call of Duty®: Black Ops III', 'Cities: Skylines',\n",
-      "       'Counter-Strike: Global Offensive', 'Counter-Strike: Source',\n",
-      "       'DARK SOULS™ III', 'DOOM', 'Darkest Dungeon®', 'DayZ',\n",
-      "       'Dead by Daylight', 'Deep Rock Galactic',\n",
-      "       'Divinity: Original Sin 2 - Definitive Edition',\n",
-      "       'Don't Starve Together', 'Dota 2', 'Dying Light',\n",
-      "       'Euro Truck Simulator 2', 'Factorio', 'Fallout 4', 'Fallout: New Vegas',\n",
-      "       'Far Cry® 5', 'Garry's Mod',\n",
-      "       'Grand Theft Auto IV: The Complete Edition', 'Grand Theft Auto V',\n",
-      "       'Half-Life 2', 'Hearts of Iron IV', 'Hollow Knight', 'Human: Fall Flat',\n",
-      "       'Hunt: Showdown', 'Left 4 Dead 2', 'Life is Strange - Episode 1',\n",
-      "       'Monster Hunter: World', 'Mount & Blade: Warband', 'No Man's Sky',\n",
-      "       'PAYDAY 2', 'PUBG: BATTLEGROUNDS', 'Paladins®', 'Path of Exile',\n",
-      "       'Portal 2', 'Project Zomboid', 'Raft', 'RimWorld', 'Risk of Rain 2',\n",
-      "       'Rust', 'Sekiro™: Shadows Die Twice - GOTY Edition',\n",
-      "       'Sid Meier’s Civilization® VI', 'Slay the Spire', 'Stardew Valley',\n",
-      "       'Subnautica', 'Team Fortress 2', 'Terraria',\n",
-      "       'The Binding of Isaac: Rebirth',\n",
-      "       'The Elder Scrolls V: Skyrim Special Edition',\n",
-      "       'The Elder Scrolls® Online', 'The Forest', 'The Witcher® 3: Wild Hunt',\n",
-      "       'Tom Clancy's Rainbow Six® Siege', 'Tomb Raider', 'Undertale',\n",
-      "       'Unturned', 'VRChat', 'Wallpaper Engine', 'War Thunder', 'Warframe',\n",
-      "       'World of Tanks Blitz', 'theHunter: Call of the Wild™'],\n",
-      "      dtype='object', name='title')\n",
-      "Index([     491,     1183,     2710,     2765,     3214,     4446,    15089,\n",
-      "          15619,    16448,    18794,\n",
-      "       ...\n",
-      "       13755432, 13758387, 13761904, 13763873, 13777901, 13778085, 13778487,\n",
-      "       13778506, 13778726, 13781520],\n",
-      "      dtype='int64', name='user_id', length=281295)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(user_item_matrix.index)\n",
-    "print(user_item_matrix.columns)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "def check_user_like_specific_game(user_id, game_name):\n",
-    "\n",
     "    if user_id not in user_item_matrix.columns:\n",
     "        return f\"User ID '{user_id}' not found in the dataset columns.\"\n",
     "\n",
@@ -674,7 +578,7 @@
     "        return f\"Game title '{game_name}' not found in the dataset index.\"\n",
     "\n",
     "    # Get games similar to the provided game\n",
-    "    similar_games, scores = get_similar_game(game_name)\n",
+    "    similar_games, _ = get_similar_game(game_name)\n",
     "\n",
     "    # Get games liked by the user\n",
     "    user_liked_games = get_user_liked_games(user_id)\n",
@@ -682,46 +586,119 @@
     "    if user_liked_games is None or len(user_liked_games) == 0:\n",
     "        return \"No games liked by the user.\"\n",
     "\n",
-    "    # Check if the provided game is among the top similar games for the user\n",
-    "    if game_name in similar_games:\n",
-    "        return \"Yes, user might like this game based on their preferences.\"\n",
+    "    # Check if the provided game is among the games liked by the user\n",
+    "    if game_name in user_liked_games:\n",
+    "        return \"User will definitely like this game.\"\n",
     "    else:\n",
-    "        return \"No, it's less likely that the user will like this game based on their preferences.\"\n"
+    "        # Check if the provided game is among the top similar games for the user\n",
+    "        if game_name in similar_games:\n",
+    "            return \"Yes, user might like this game based on their preferences.\"\n",
+    "        else:\n",
+    "            return \"No, it's less likely that the user will like this game based on their preferences.\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_top_similar_games_for_user(user_id):\n",
+    "    liked_games = get_user_liked_games(user_id)\n",
+    "\n",
+    "    if liked_games is None or len(liked_games) == 0:\n",
+    "        return \"No games liked by the user.\"\n",
+    "\n",
+    "    similar_games_list = []\n",
+    "    for game in liked_games:\n",
+    "        similar_games, _ = get_similar_game(game)\n",
+    "        similar_games_list.extend(similar_games)\n",
+    "\n",
+    "    # Removing duplicates and keeping the counts of each game\n",
+    "    similar_games_counts = pd.Series(similar_games_list).value_counts()\n",
+    "\n",
+    "    # Selecting top 10 similar games\n",
+    "    top_similar_games = similar_games_counts.head(10)\n",
+    "\n",
+    "    return top_similar_games.index.tolist()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "29",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pandas\\core\\indexes\\base.py:3790\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3789\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m-> 3790\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_engine\u001b[39m.\u001b[39;49mget_loc(casted_key)\n\u001b[0;32m   3791\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n",
-      "File \u001b[1;32mindex.pyx:152\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mindex.pyx:181\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:7080\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:7088\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 29",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32md:\\git\\SteamGameRecommendationSystem\\src\\SVD.ipynb Cell 11\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/git/SteamGameRecommendationSystem/src/SVD.ipynb#X13sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Use the function for checking user likeness with SVD\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/git/SteamGameRecommendationSystem/src/SVD.ipynb#X13sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m like_prediction \u001b[39m=\u001b[39m check_user_like_specific_game(\u001b[39m13755432\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39mGarry\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39ms Mod\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/git/SteamGameRecommendationSystem/src/SVD.ipynb#X13sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mprint\u001b[39m(like_prediction)\n",
-      "\u001b[1;32md:\\git\\SteamGameRecommendationSystem\\src\\SVD.ipynb Cell 11\u001b[0m line \u001b[0;36m1\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/git/SteamGameRecommendationSystem/src/SVD.ipynb#X13sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mGame title \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mgame_name\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m not found in the dataset index.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/git/SteamGameRecommendationSystem/src/SVD.ipynb#X13sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39m# Get games similar to the provided game\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/git/SteamGameRecommendationSystem/src/SVD.ipynb#X13sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m similar_games, scores \u001b[39m=\u001b[39m get_top_similar_games(game_name)\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/git/SteamGameRecommendationSystem/src/SVD.ipynb#X13sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39m# Get games liked by the user\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/git/SteamGameRecommendationSystem/src/SVD.ipynb#X13sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m user_liked_games \u001b[39m=\u001b[39m get_user_liked_games(user_id)\n",
-      "\u001b[1;32md:\\git\\SteamGameRecommendationSystem\\src\\SVD.ipynb Cell 11\u001b[0m line \u001b[0;36m6\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/git/SteamGameRecommendationSystem/src/SVD.ipynb#X13sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mNone\u001b[39;00m  \u001b[39m# Return None if game_name is not found\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/git/SteamGameRecommendationSystem/src/SVD.ipynb#X13sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m game_index \u001b[39m=\u001b[39m user_item_matrix\u001b[39m.\u001b[39mindex\u001b[39m.\u001b[39mget_loc(game_name)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/git/SteamGameRecommendationSystem/src/SVD.ipynb#X13sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m sim_scores \u001b[39m=\u001b[39m svd_based_collabor[game_index]\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/git/SteamGameRecommendationSystem/src/SVD.ipynb#X13sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39m# Get indices of top similar games (excluding the game itself)\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/git/SteamGameRecommendationSystem/src/SVD.ipynb#X13sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m similar_game_indices \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39margsort(sim_scores)[::\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m][\u001b[39m1\u001b[39m:\u001b[39m11\u001b[39m]\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pandas\\core\\frame.py:3893\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3891\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns\u001b[39m.\u001b[39mnlevels \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[0;32m   3892\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 3893\u001b[0m indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcolumns\u001b[39m.\u001b[39;49mget_loc(key)\n\u001b[0;32m   3894\u001b[0m \u001b[39mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   3895\u001b[0m     indexer \u001b[39m=\u001b[39m [indexer]\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pandas\\core\\indexes\\base.py:3797\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3792\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(casted_key, \u001b[39mslice\u001b[39m) \u001b[39mor\u001b[39;00m (\n\u001b[0;32m   3793\u001b[0m         \u001b[39misinstance\u001b[39m(casted_key, abc\u001b[39m.\u001b[39mIterable)\n\u001b[0;32m   3794\u001b[0m         \u001b[39mand\u001b[39;00m \u001b[39many\u001b[39m(\u001b[39misinstance\u001b[39m(x, \u001b[39mslice\u001b[39m) \u001b[39mfor\u001b[39;00m x \u001b[39min\u001b[39;00m casted_key)\n\u001b[0;32m   3795\u001b[0m     ):\n\u001b[0;32m   3796\u001b[0m         \u001b[39mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[1;32m-> 3797\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key) \u001b[39mfrom\u001b[39;00m \u001b[39merr\u001b[39;00m\n\u001b[0;32m   3798\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m:\n\u001b[0;32m   3799\u001b[0m     \u001b[39m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3800\u001b[0m     \u001b[39m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3801\u001b[0m     \u001b[39m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3802\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_indexing_error(key)\n",
-      "\u001b[1;31mKeyError\u001b[0m: 29"
+     "data": {
+      "text/plain": [
+       "['Counter-Strike: Global Offensive',\n",
+       " 'Factorio',\n",
+       " 'Hunt: Showdown',\n",
+       " 'Borderlands 2',\n",
+       " 'DOOM',\n",
+       " 'Risk of Rain 2',\n",
+       " 'The Binding of Isaac: Rebirth',\n",
+       " 'Life is Strange - Episode 1',\n",
+       " 'Project Zomboid',\n",
+       " 'Warframe']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_similar_games = get_top_similar_games_for_user(7606333)\n",
+    "top_similar_games"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Yes, user might like this game based on their preferences.'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "check_user_like_specific_game(7606333, \"Dying Light\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Garry's Mod with similarity of 1.0\n",
+      "Counter-Strike: Global Offensive with similarity of 0.9999553895567478\n",
+      "World of Tanks Blitz with similarity of 0.99898138056906\n",
+      "BeamNG.drive with similarity of 0.9984089261089114\n",
+      "Among Us with similarity of 0.9971708536650874\n",
+      "Counter-Strike: Source with similarity of 0.9959094478974789\n",
+      "Unturned with similarity of 0.9955021418000567\n",
+      "PAYDAY 2 with similarity of 0.9951784746523186\n",
+      "Rust with similarity of 0.9942513641098985\n",
+      "War Thunder with similarity of 0.9884692797726358\n"
      ]
     }
    ],
    "source": [
-    "# Use the function for checking user likeness with SVD\n",
-    "like_prediction = check_user_like_specific_game(13755432, \"Garry's Mod\")\n",
-    "print(like_prediction)"
+    "games, score = get_similar_game(\"Garry's Mod\")\n",
+    "for x,y in zip(games[:10], score[:10]):\n",
+    "    print(\"{} with similarity of {}\".format(x, y))"
    ]
   }
  ],
