Decision tree 제외 evaluate

--- a/src/SVD.ipynb
+++ b/src/SVD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
        "[5 rows x 59 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
        "[5 rows x 281295 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -634,8 +634,8 @@
        "['Counter-Strike: Global Offensive',\n",
        " 'Factorio',\n",
        " 'Hunt: Showdown',\n",
-       " 'Borderlands 2',\n",
        " 'DOOM',\n",
+       " 'Borderlands 2',\n",
        " 'Risk of Rain 2',\n",
        " 'The Binding of Isaac: Rebirth',\n",
        " 'Life is Strange - Episode 1',\n",
@@ -643,7 +643,7 @@
        " 'Warframe']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
        "'Yes, user might like this game based on their preferences.'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,23 +675,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Garry's Mod with similarity of 1.0\n",
-      "Counter-Strike: Global Offensive with similarity of 0.9999553895567478\n",
-      "World of Tanks Blitz with similarity of 0.99898138056906\n",
-      "BeamNG.drive with similarity of 0.9984089261089114\n",
-      "Among Us with similarity of 0.9971708536650874\n",
-      "Counter-Strike: Source with similarity of 0.9959094478974789\n",
-      "Unturned with similarity of 0.9955021418000567\n",
-      "PAYDAY 2 with similarity of 0.9951784746523186\n",
-      "Rust with similarity of 0.9942513641098985\n",
-      "War Thunder with similarity of 0.9884692797726358\n"
+      "Garry's Mod with similarity of 0.9999999999999999\n",
+      "Counter-Strike: Global Offensive with similarity of 0.9999341609662765\n",
+      "World of Tanks Blitz with similarity of 0.9979862225281152\n",
+      "BeamNG.drive with similarity of 0.9970869706004476\n",
+      "Among Us with similarity of 0.9963657169267404\n",
+      "PAYDAY 2 with similarity of 0.9950669842416631\n",
+      "Counter-Strike: Source with similarity of 0.9947070998848019\n",
+      "Rust with similarity of 0.9946697198670462\n",
+      "Unturned with similarity of 0.9946118870391469\n",
+      "Tom Clancy's Rainbow Six® Siege with similarity of 0.9896927665407848\n"
      ]
     }
    ],
@@ -699,6 +699,99 @@
     "games, score = get_similar_game(\"Garry's Mod\")\n",
     "for x,y in zip(games[:10], score[:10]):\n",
     "    print(\"{} with similarity of {}\".format(x, y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Int64Index([    1183,     2765,     4446,    15089,    16448,    48843,\n",
+      "               51559,    73191,    73274,    83283,\n",
+      "            ...\n",
+      "            13703989, 13708103, 13714056, 13715092, 13718408, 13720291,\n",
+      "            13735884, 13737779, 13755432, 13781520],\n",
+      "           dtype='int64', name='user_id', length=1417)\n",
+      "(41908, 59)\n",
+      "(4457, 59)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "user_game_count = pd.DataFrame(games_df.groupby('user_id')['app_id'].count())\n",
+    "# print(user_game_count[user_game_count['user_id'] > 10].shape)\n",
+    "\n",
+    "over_10_users = user_game_count[user_game_count['app_id'] > 10].index\n",
+    "under_10_users = user_game_count[user_game_count['app_id'] <= 10].index\n",
+    "print(over_10_users)\n",
+    "\n",
+    "train_X = []\n",
+    "test_X = []\n",
+    "\n",
+    "for user in games_df['user_id'].unique():\n",
+    "    X = games_df[games_df['user_id'] == user]\n",
+    "    \n",
+    "    if len(X) <= 10:\n",
+    "        train_X.append(X)\n",
+    "        continue\n",
+    "    \n",
+    "    train, test = train_test_split(X,test_size=0.2)\n",
+    "    train_X.append(train)\n",
+    "    test_X.append(test)\n",
+    "\n",
+    "train_X = pd.concat(train_X)\n",
+    "test_X = pd.concat(test_X)\n",
+    "    \n",
+    "print(train_X.shape)\n",
+    "print(test_X.shape)\n",
+    "\n",
+    "# get_top_similar_games_for_user(7606333)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "average_precision: 0.05806680881307742\n",
+      "average_recall: 0.20172437134057608\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_precisions = []\n",
+    "all_recalls = []\n",
+    "\n",
+    "for user in over_10_users:\n",
+    "    user_test_X = test_X[test_X['user_id'] == user]\n",
+    "    actual_Y = pd.DataFrame(user_test_X[user_test_X['is_recommended'] == 1])\n",
+    "    \n",
+    "    predict_Y = pd.DataFrame(get_top_similar_games_for_user(user), columns=['title'])\n",
+    "\n",
+    "        \n",
+    "    if not actual_Y.empty and not predict_Y.empty:\n",
+    "        hit = len(set(actual_Y['title']) & set(predict_Y['title']))\n",
+    "        precision = hit / len(predict_Y['title'])\n",
+    "        recall = hit / len(actual_Y['title'])\n",
+    "        all_precisions.append(precision)\n",
+    "        all_recalls.append(recall)\n",
+    "            \n",
+    "\n",
+    "average_precision = sum(all_precisions) / len(all_precisions)\n",
+    "average_recall = sum(all_recalls) / len(all_recalls)\n",
+    "\n",
+    "print(\"average_precision:\" , average_precision)\n",
+    "print(\"average_recall:\", average_recall)"
    ]
   }
  ],
@@ -718,7 +811,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
