--- a/src/item_based.ipynb
+++ b/src/item_based.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
        "[5 rows x 59 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
        "[5 rows x 281295 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -948,7 +948,7 @@
        "[74 rows x 74 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1072,14 +1072,14 @@
     "    similar_games_counts = pd.Series(similar_games_list).value_counts()\n",
     "\n",
     "    # Selecting top 10 similar games\n",
-    "    top_similar_games = similar_games_counts.head(10)\n",
+    "    top_similar_games = similar_games_counts.head(5)\n",
     "\n",
     "    return top_similar_games.index.tolist()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1089,15 +1089,10 @@
        " 'The Binding of Isaac: Rebirth',\n",
        " 'The Elder Scrolls V: Skyrim Special Edition',\n",
        " 'World of Tanks Blitz',\n",
-       " 'Risk of Rain 2',\n",
-       " 'Hollow Knight',\n",
-       " 'Sekiro™: Shadows Die Twice - GOTY Edition',\n",
-       " 'Fallout: New Vegas',\n",
-       " 'Cities: Skylines',\n",
-       " 'DOOM']"
+       " 'Risk of Rain 2']"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1109,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1118,7 +1113,7 @@
        "'Yes, user might like this game based on their preferences.'"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1129,23 +1124,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Garry's Mod with similarity of 1.0000000000000002\n",
-      "Team Fortress 2 with similarity of 0.29086203874124655\n",
-      "Left 4 Dead 2 with similarity of 0.2804833134350736\n",
-      "PAYDAY 2 with similarity of 0.2698265908543987\n",
-      "Among Us with similarity of 0.26549489601919857\n",
-      "Portal 2 with similarity of 0.2447025242944189\n",
-      "The Forest with similarity of 0.23769734661604713\n",
-      "Tom Clancy's Rainbow Six® Siege with similarity of 0.23707751115297693\n",
-      "Wallpaper Engine with similarity of 0.22942258172666674\n",
-      "Half-Life 2 with similarity of 0.2258854073537678\n"
+      "Garry's Mod with similarity of 1.0000000000000007\n",
+      "Team Fortress 2 with similarity of 0.29086203874124555\n",
+      "Left 4 Dead 2 with similarity of 0.28048331343507327\n",
+      "PAYDAY 2 with similarity of 0.2698265908543991\n",
+      "Among Us with similarity of 0.2654948960191988\n",
+      "Portal 2 with similarity of 0.24470252429441935\n",
+      "The Forest with similarity of 0.23769734661604697\n",
+      "Tom Clancy's Rainbow Six® Siege with similarity of 0.23707751115297676\n",
+      "Wallpaper Engine with similarity of 0.2294225817266671\n",
+      "Half-Life 2 with similarity of 0.22588540735376822\n"
      ]
     }
    ],
@@ -1153,6 +1148,99 @@
     "games, score = get_similar_game(\"Garry's Mod\")\n",
     "for x,y in zip(games[:10], score[:10]):\n",
     "    print(\"{} with similarity of {}\".format(x, y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Int64Index([    1183,     2765,     4446,    15089,    16448,    48843,\n",
+      "               51559,    73191,    73274,    83283,\n",
+      "            ...\n",
+      "            13703989, 13708103, 13714056, 13715092, 13718408, 13720291,\n",
+      "            13735884, 13737779, 13755432, 13781520],\n",
+      "           dtype='int64', name='user_id', length=1417)\n",
+      "(41908, 59)\n",
+      "(4457, 59)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "user_game_count = pd.DataFrame(games_df.groupby('user_id')['app_id'].count())\n",
+    "# print(user_game_count[user_game_count['user_id'] > 10].shape)\n",
+    "\n",
+    "over_10_users = user_game_count[user_game_count['app_id'] > 10].index\n",
+    "under_10_users = user_game_count[user_game_count['app_id'] <= 10].index\n",
+    "print(over_10_users)\n",
+    "\n",
+    "train_X = []\n",
+    "test_X = []\n",
+    "\n",
+    "for user in games_df['user_id'].unique():\n",
+    "    X = games_df[games_df['user_id'] == user]\n",
+    "    \n",
+    "    if len(X) <= 10:\n",
+    "        train_X.append(X)\n",
+    "        continue\n",
+    "    \n",
+    "    train, test = train_test_split(X,test_size=0.2)\n",
+    "    train_X.append(train)\n",
+    "    test_X.append(test)\n",
+    "\n",
+    "train_X = pd.concat(train_X)\n",
+    "test_X = pd.concat(test_X)\n",
+    "    \n",
+    "print(train_X.shape)\n",
+    "print(test_X.shape)\n",
+    "\n",
+    "# get_top_similar_games_for_user(7606333)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "average_precision: 0.06784953867991535\n",
+      "average_recall: 0.11655006928250378\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_precisions = []\n",
+    "all_recalls = []\n",
+    "\n",
+    "for user in over_10_users:\n",
+    "    user_test_X = test_X[test_X['user_id'] == user]\n",
+    "    actual_Y = pd.DataFrame(user_test_X[user_test_X['is_recommended'] == 1])\n",
+    "    \n",
+    "    predict_Y = pd.DataFrame(get_top_similar_games_for_user(user), columns=['title'])\n",
+    "\n",
+    "        \n",
+    "    if not actual_Y.empty and not predict_Y.empty:\n",
+    "        hit = len(set(actual_Y['title']) & set(predict_Y['title']))\n",
+    "        precision = hit / len(predict_Y['title'])\n",
+    "        recall = hit / len(actual_Y['title'])\n",
+    "        all_precisions.append(precision)\n",
+    "        all_recalls.append(recall)\n",
+    "            \n",
+    "\n",
+    "average_precision = sum(all_precisions) / len(all_precisions)\n",
+    "average_recall = sum(all_recalls) / len(all_recalls)\n",
+    "\n",
+    "print(\"average_precision:\" , average_precision)\n",
+    "print(\"average_recall:\", average_recall)"
    ]
   }
  ],
@@ -1172,7 +1260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
